@@ -16,3 +16,4 @@ CVS Surgery
  - Rename .glade files in standard convention (gnome-xxx-properties.glade)
  - Rename primary .c files in standard convention (gnome-xxx-properties.c)
  - Kill url-properties, preferably with extreme prejudice
+ - Kill unused files in file-types
