@@ -998,7 +998,7 @@
                     </child>
 
                     <child>
-                      <widget class="GtkHBox" id="hbox12">
+                      <widget class="GtkHBox" id="program_entry_box">
                         <property name="homogeneous">no</property>
                         <property name="spacing">4</property>
                         <property name="visible">yes</property>
