@@ -953,7 +953,7 @@
 
 	  <widget>
 	    <class>GtkHBox</class>
-	    <name>hbox12</name>
+	    <name>program_entry_box</name>
 	    <homogeneous>False</homogeneous>
 	    <spacing>4</spacing>
 	    <child>
